Audit and update documentation; target Spark 4.1.1
- Remove 11 obsolete docs: stale test reports, incomplete specs
  (LAMBDA, STATISTICS, UNRESOLVED, UDF, TO_SCHEMA), unimplemented
  feature specs (EC2_BENCHMARKING, INTERACTIVE_NOTEBOOK),
  meta doc (CLAUDE_CODE_EFFICIENCY_REVIEW), outdated MVP plan
- Update Spark version refs from 4.0.1 to 4.1.1 across README,
  test scripts, and architecture docs
- Trim README: remove unverified perf claims, stale E2E section,
  fix function count (500+ -> 170+), Java badge (17 -> 21)
- Soften "zero-copy Arrow" to "Arrow-native data interchange"
- Update SPARK_CONNECT_GAP_ANALYSIS: test counts, baseline, version history
- Mark SPARKSQL_PARSER_DESIGN as implemented
- Update DIFFERENTIAL_TESTING_ARCHITECTURE: module-scoped fixtures,
  auto-allocated ports, 37 test files
- Add implementation outcome to SQL_PARSER_RESEARCH

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>